<resources>
    <string name="app_name">YuChat</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="name_hint">Please enter your name</string>
    <string name="password_hint">Please enter your password</string>
    <string name="number_hint">Please enter your number</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
</resources>
